# fastapi-chat

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  Procfile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_create_models.py  0002_create_admin_user_model.py  0003_increase_user_image_text_length.py  0004_add_settings_to_user_model.py  0005_add_type_and_file_fields_to_message.py  0006_create_indexes.py  0006_create_indexes_increase_user_image_char_.py
src/: config.py  database.py  dependencies.py  main.py  models.py  routers.py  utils.py
src/admin/: admin.py  authentication_backend.py  models.py  services.py
src/api/: routers.py
src/api/authentication/: router.py  schemas.py  services.py
src/api/chat/: router.py  schemas.py  services.py
src/api/contact/: router.py  schemas.py  services.py
src/api/registration/: router.py  schemas.py  services.py
src/api/settings/: router.py  services.py
src/api/websocket/: exceptions.py  handlers.py  rate_limiter.py  router.py  schemas.py  services.py  websocket.py
src/authentication/: router.py  schemas.py  services.py  utils.py
src/chat/: router.py  schemas.py  services.py
src/contact/: router.py  schemas.py  services.py
src/managers/: pubsub_manager.py  websocket_manager.py
src/registration/: router.py  services.py
src/services/: pubsub_manager.py  websocket_manager.py
src/settings/: router.py  schemas.py  services.py
src/websocket/: handlers.py  rate_limiter.py  router.py  schemas.py  services.py
templates/: index.html
tests/: conftest.py
tests/api/: test_user_authentication.py  test_user_registration.py
tests/api/chat/: test_create_chat.py  test_get_chat_messages.py  test_get_or_create_chat.py  test_get_user_chats.py  test_send_message.py
tests/api/chat/services/: test_direct_chat_exists.py
tests/api/user/: test_user_registration.py
tests/authentication/: test_authentication_router.py
tests/chat/router/: test_create_chat.py  test_get_chat_messages.py  test_get_older_messages.py  test_get_user_chats.py
tests/chat/services/: test_direct_chat_exists.py
tests/contact/: test_contact_router.py
tests/registration/: test_registration_router.py
tests/settings/: test_settings_router.py
